pilar3-despliegue/kubernetes/applications/voxchain-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: voxchain-frontend
  namespace: voxchain
spec:
  selector:
    app: voxchain-frontend
  ports:
    - port: 80
      targetPort: 8080
      name: http
